@@ -1,3 +1,7 @@
+19991112
+ - Merged changes from OpenBSD CVS
+   - [sshd.c] session_key_int may be zero
+
 19991111
  - Added (untested) Entropy Gathering Daemon (EGD) support
  - Fixed fd leak
@@ -15,7 +19,12 @@
      [ssh.1 ssh.c ssh.h sshd.8]
      add LogLevel {QUIET, FATAL, ERROR, INFO, CHAT, DEBUG} to ssh/sshd,
      obsoletes QuietMode and FascistLogging in sshd.
-     
+   - [sshd.c] fix fatal/assert() bug reported by damien@ibs.com.au:
+     allow session_key_int != sizeof(session_key)
+     [this should fix the pre-assert-removal-core-files]
+ - Updated default config file to use new LogLevel option and to improve
+   readability
+
 19991110
  - Merged several minor fixed:
    - ssh-agent commandline parsing
